added distance calculation and save distances

--- a/test_skripts/test_stuff.ipynb
+++ b/test_skripts/test_stuff.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,14 +11,258 @@
     "sys.path.append(parent_path)\n",
     "\n",
     "import numpy as np\n",
-    "from polymer.config import Config\n",
+    "from polymer import Config, Polymer\n",
     "import toml\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from numba import njit\n",
+    "from time import time\n",
+    "from datetime import timedelta"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cfg_fname = '/home/jan/Documents/masterthesis/project/mucus/configs/cfg_chain_testForces_50beads_1Msteps_3.toml'\n",
+    "\n",
+    "def delete_lbox(cfg_fname):\n",
+    "    f = open(cfg_fname)\n",
+    "    output = \"\"\n",
+    "    for line in f:\n",
+    "        if line != \"lbox = None\\n\":\n",
+    "            output += line\n",
+    "    f.close()\n",
+    "\n",
+    "    f = open(cfg_fname, \"w\")\n",
+    "    f.write(output)\n",
+    "    f.close()\n",
+    "    return\n",
+    "\n",
+    "delete_lbox(cfg_fname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def delete_lbox(cfg_fname):\n",
+    "    f = open(cfg_fname)\n",
+    "    output = \"\"\n",
+    "    for line in f:\n",
+    "        if line != \"lbox = None\\n\":\n",
+    "            output += line\n",
+    "    f.close()\n",
+    "\n",
+    "    f = open(cfg_fname, \"w\")\n",
+    "    f.write(output)\n",
+    "    f.close()\n",
+    "    return\n",
+    "\n",
+    "def distances(traj):\n",
+    "    n = len(traj[0]) # number of atoms\n",
+    "    distances = np.zeros((1, n , n))\n",
+    "    \n",
+    "    r_left = np.tile(traj[0], (n, 1, 1)) # repeats vector along third dimension len(a) times\n",
+    "    r_right = np.reshape(np.repeat(traj[0], n, 0), (n, n, 3)) # does the same but \"flipped\"\n",
+    "\n",
+    "    directions = r_left - r_right # this is right considering the mesh method. dir[i, j] = r_j - r_i\n",
+    "    distances[0] = np.linalg.norm(directions, axis=2)\n",
+    "    \n",
+    "    for frame in traj[1:]:\n",
+    "        r_left = np.tile(frame, (n, 1, 1)) # repeats vector along third dimension len(a) times\n",
+    "        r_right = np.reshape(np.repeat(frame, n, 0), (n, n, 3)) # does the same but \"flipped\"\n",
+    "\n",
+    "        directions = r_left - r_right # this is right considering the mesh method. dir[i, j] = r_j - r_i\n",
+    "        distances = np.append(distances, [np.linalg.norm(directions, axis=2)], axis=0)\n",
+    "        \n",
+    "    return distances\n",
+    "\n",
+    "# calculate rdf\n",
+    "name = 'chain_testForces_50beads_1Msteps'\n",
+    "dir_data = '/storage/janmak98/masterthesis'\n",
+    "i = 3\n",
+    "\n",
+    "cfg_fname = f'/home/jan/Documents/masterthesis/project/mucus/configs/cfg_{name:s}_{i:d}.toml'\n",
+    "traj_fname = f'/home/jan/Documents/masterthesis/project/mucus/trajectories/traj_{name:s}_{i:d}.gro'\n",
+    "dist_fname = f'/home/jan/Documents/masterthesis/project/mucus/distances/test/dist_{name:s}_{i:d}.npy'\n",
+    "\n",
+    "# in .py\n",
+    "cfg_fname = f'{dir_data:s}/configs/box/test/cfg_{name:s}_{i:d}.toml'\n",
+    "traj_fname = f'{dir_data:s}/trajectories/box/test/traj_{name:s}_{i:d}.gro'\n",
+    "dist_fname = f'{dir_data:s}/distances/box/test/dist_{name:s}_{i:d}.npy'\n",
+    "\n",
+    "\n",
+    "delete_lbox(cfg_fname)\n",
+    "\n",
+    "cfg = Config.from_toml(cfg_fname)\n",
+    "p = Polymer(cfg)\n",
+    "p.load_traj_gro(traj_fname, overwrite=True)\n",
+    "\n",
+    "d = distances(p.trajectory[:100])\n",
+    "np.save(dist_fname, d)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['/storage/janmak98/masterthesis/configs/box/test/cfg_box_twoChains_140beads_2Msteps.toml', '/storage/janmak98/masterthesis/configs/box/test/cfg_chain_testForces_50beads_1Msteps_0.toml', '/storage/janmak98/masterthesis/configs/box/test/cfg_chain_testForces_50beads_1Msteps_1.toml', '/storage/janmak98/masterthesis/configs/box/test/cfg_chain_testForces_50beads_1Msteps_2.toml', '/storage/janmak98/masterthesis/configs/box/test/cfg_chain_testForces_50beads_1Msteps_3.toml', '/storage/janmak98/masterthesis/configs/box/test/cfg_box_testCharges_100beads_1Msteps_0.toml', '/storage/janmak98/masterthesis/configs/box/test/cfg_box_testCharges_100beads_1Msteps_1.toml', '/storage/janmak98/masterthesis/configs/box/test/cfg_box_testCharges_100beads_1Msteps_2.toml', '/storage/janmak98/masterthesis/configs/box/test/cfg_box_testCharges_100beads_1Msteps_3.toml']\n",
+      "['/storage/janmak98/masterthesis/trajectories/box/test/traj_box_twoChains_140beads_2Msteps.gro', '/storage/janmak98/masterthesis/trajectories/box/test/traj_chain_testForces_50beads_1Msteps_0.gro', '/storage/janmak98/masterthesis/trajectories/box/test/traj_chain_testForces_50beads_1Msteps_1.gro', '/storage/janmak98/masterthesis/trajectories/box/test/traj_chain_testForces_50beads_1Msteps_2.gro', '/storage/janmak98/masterthesis/trajectories/box/test/traj_chain_testForces_50beads_1Msteps_3.gro', '/storage/janmak98/masterthesis/trajectories/box/test/traj_box_testCharges_100beads_1Msteps_0.gro', '/storage/janmak98/masterthesis/trajectories/box/test/traj_box_testCharges_100beads_1Msteps_1.gro', '/storage/janmak98/masterthesis/trajectories/box/test/traj_box_testCharges_100beads_1Msteps_2.gro', '/storage/janmak98/masterthesis/trajectories/box/test/traj_box_testCharges_100beads_1Msteps_3.gro']\n",
+      "['/storage/janmak98/masterthesis/distances/box/test/dist_box_twoChains_140beads_2Msteps.npy', '/storage/janmak98/masterthesis/distances/box/test/dist_chain_testForces_50beads_1Msteps_0.npy', '/storage/janmak98/masterthesis/distances/box/test/dist_chain_testForces_50beads_1Msteps_1.npy', '/storage/janmak98/masterthesis/distances/box/test/dist_chain_testForces_50beads_1Msteps_2.npy', '/storage/janmak98/masterthesis/distances/box/test/dist_chain_testForces_50beads_1Msteps_3.npy', '/storage/janmak98/masterthesis/distances/box/test/dist_box_testCharges_100beads_1Msteps_0.npy', '/storage/janmak98/masterthesis/distances/box/test/dist_box_testCharges_100beads_1Msteps_1.npy', '/storage/janmak98/masterthesis/distances/box/test/dist_box_testCharges_100beads_1Msteps_2.npy', '/storage/janmak98/masterthesis/distances/box/test/dist_box_testCharges_100beads_1Msteps_3.npy']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# make the .py\n",
+    "import numpy as np\n",
+    "from polymer import Config, Polymer\n",
+    "import os\n",
+    "import time\n",
+    "import datetime\n",
+    "\n",
+    "names = ('chain_testForces_50beads_1Msteps', 'box_testCharges_100beads_1Msteps')\n",
+    "dir_data = '/storage/janmak98/masterthesis'\n",
+    "\n",
+    "cfg_names = list(())\n",
+    "cfg_names.append(dir_data+'/configs/box/test/cfg_box_twoChains_140beads_2Msteps.toml')\n",
+    "traj_names = list(())\n",
+    "traj_names.append(dir_data + '/trajectories/box/test/traj_box_twoChains_140beads_2Msteps.gro')\n",
+    "dist_names = list(())\n",
+    "dist_names.append(dir_data + '/distances/box/test/dist_box_twoChains_140beads_2Msteps.npy')\n",
+    "\n",
+    "for name in names:\n",
+    "    for i in range(4):\n",
+    "        cfg_fname = f'{dir_data:s}/configs/box/test/cfg_{name:s}_{i:d}.toml'\n",
+    "        traj_fname = f'{dir_data:s}/trajectories/box/test/traj_{name:s}_{i:d}.gro'\n",
+    "        dist_fname = f'{dir_data:s}/distances/box/test/dist_{name:s}_{i:d}.npy'\n",
+    "        \n",
+    "        cfg_names.append(cfg_fname)\n",
+    "        traj_names.append(traj_fname)\n",
+    "        dist_names.append(dist_fname)\n",
+    "        \n",
+    "for fname in cfg_names:\n",
+    "    if not os.path.exists(fname):\n",
+    "        raise NameError('File '+fname+' does not exist!')\n",
+    "    \n",
+    "for fname in cfg_names:\n",
+    "    if not os.path.exists(fname):\n",
+    "        raise NameError('File '+fname+' does not exist!')\n",
+    "\n",
+    "# delete lbox = None in .toml file\n",
+    "def delete_lbox(cfg_fname):\n",
+    "    f = open(cfg_fname)\n",
+    "    output = \"\"\n",
+    "    for line in f:\n",
+    "        if line != \"lbox = None\\n\":\n",
+    "            output += line\n",
+    "    f.close()\n",
+    "\n",
+    "    f = open(cfg_fname, \"w\")\n",
+    "    f.write(output)\n",
+    "    f.close()\n",
+    "    return\n",
+    "\n",
+    "# calculate distance matrix trajectory\n",
+    "def distances(traj):\n",
+    "    n = len(traj[0]) # number of atoms\n",
+    "    distances = np.zeros((1, n , n))\n",
+    "    \n",
+    "    r_left = np.tile(traj[0], (n, 1, 1)) # repeats vector along third dimension len(a) times\n",
+    "    r_right = np.reshape(np.repeat(traj[0], n, 0), (n, n, 3)) # does the same but \"flipped\"\n",
+    "\n",
+    "    directions = r_left - r_right # this is right considering the mesh method. dir[i, j] = r_j - r_i\n",
+    "    distances[0] = np.linalg.norm(directions, axis=2)\n",
+    "    \n",
+    "    for frame in traj[1:]:\n",
+    "        r_left = np.tile(frame, (n, 1, 1)) # repeats vector along third dimension len(a) times\n",
+    "        r_right = np.reshape(np.repeat(frame, n, 0), (n, n, 3)) # does the same but \"flipped\"\n",
+    "\n",
+    "        directions = r_left - r_right # this is right considering the mesh method. dir[i, j] = r_j - r_i\n",
+    "        distances = np.append(distances, [np.linalg.norm(directions, axis=2)], axis=0)\n",
+    "        \n",
+    "    return distances\n",
+    "N = len(cfg_names)\n",
+    "i = 1\n",
+    "\n",
+    "now = time.localtime()\n",
+    "now_str = f\"{now.tm_mon:d}.{now.tm_mday}.{now.tm_year}  {now.tm_hour}:{now.tm_min}:{now.tm_sec}\"\n",
+    "print(\"\\nCalculation started \", now_str)\n",
+    "\n",
+    "for cfg_fname, traj_fname, dist_fname in zip(cfg_names, traj_names, dist_names):\n",
+    "    \n",
+    "    delete_lbox(cfg_fname)\n",
+    "\n",
+    "    cfg = Config.from_toml(cfg_fname)\n",
+    "    p = Polymer(cfg)\n",
+    "    p.load_traj_gro(traj_fname, overwrite=True)\n",
+    "\n",
+    "    d = distances(p.trajectory)\n",
+    "    np.save(dist_fname, d)\n",
+    "    \n",
+    "    print(f'\\n{i:d}/{N:d} distances calculated')\n",
+    "    i += 1\n",
+    "    \n",
+    "now = time.localtime()\n",
+    "now_str = f\"{now.tm_mon:d}.{now.tm_mday}.{now.tm_year}  {now.tm_hour}:{now.tm_min}:{now.tm_sec}\"\n",
+    "\n",
+    "print(\"\\nCalculation finished \", now_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "302 days, 10:27:55.188446\n"
+     ]
+    }
+   ],
+   "source": [
+    "# calculate radial distribution function\n",
+    "# @njit\n",
+    "def distances(traj):\n",
+    "    n = len(traj[0]) # number of atoms\n",
+    "    distances = np.zeros((1, n , n))\n",
+    "    \n",
+    "    r_left = np.tile(traj[0], (n, 1, 1)) # repeats vector along third dimension len(a) times\n",
+    "    r_right = np.reshape(np.repeat(traj[0], n, 0), (n, n, 3)) # does the same but \"flipped\"\n",
+    "\n",
+    "    directions = r_left - r_right # this is right considering the mesh method. dir[i, j] = r_j - r_i\n",
+    "    distances[0] = np.linalg.norm(directions, axis=2)\n",
+    "    \n",
+    "    for frame in traj[1:]:\n",
+    "        r_left = np.tile(frame, (n, 1, 1)) # repeats vector along third dimension len(a) times\n",
+    "        r_right = np.reshape(np.repeat(frame, n, 0), (n, n, 3)) # does the same but \"flipped\"\n",
+    "\n",
+    "        directions = r_left - r_right # this is right considering the mesh method. dir[i, j] = r_j - r_i\n",
+    "        distances = np.append(distances, [np.linalg.norm(directions, axis=2)], axis=0)\n",
+    "        \n",
+    "t1 = time()\n",
+    "d = distances(p.trajectory[:10000])\n",
+    "t2 = time()\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(timedelta(t2-t1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -56,17 +300,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "22701.597146294087\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def n_PEG(m):\n",
     "    \"\"\"\n",
@@ -86,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -114,15 +350,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'steps': 1000, 'stride': 50, 'nbeads': 10, 'nchains': 6, 'mobility': 5e-05, 'fname_sys': '/home/jan/Desktop', 'fname_traj': '/home/jan/Desktop'}\n",
-      "steps=1000 stride=50 nbeads=10 nchains=6 mobility=5e-05 rbead=1.0 qbead=2.08 force_constant=100.0 epsilon_LJ=0.25 sigma_LJ=2.0 cutoff_LJ=2.0 lB_debye=3.077 c_S=10 cutoff_debye=4.0 lbox=None pbc=True cutoff_pbc=None save_traj=True write_traj=True cwd='/home/jan/Documents/masterthesis/project/mucus' fname_traj='/home/jan/Desktop' fname_sys='/home/jan/Desktop' bonds=None simulation_time=None\n"
+      "{'steps': 1000, 'stride': 50, 'nbeads': 10, 'nchains': 6, 'number_of_beads': 60, 'mobility': 5e-05, 'fname_sys': '/home/jan/Desktop', 'fname_traj': '/home/jan/Desktop', 'c_S': 40}\n",
+      "steps=1000 stride=50 number_of_beads=60 nbeads=10 nchains=6 mobility=5e-05 rbead=1.0 qbead=1.524 force_constant=100.0 epsilon_LJ=0.25 sigma_LJ=2.0 cutoff_LJ=2.0 lB_debye=36.737 c_S=40.0 cutoff_debye=None lbox=None pbc=True cutoff_pbc=None save_traj=True write_traj=True cwd='/home/jan/Documents/masterthesis/project/mucus/test_skripts' fname_traj='/home/jan/Desktop' fname_sys='/home/jan/Desktop' simulation_time=None bonds=None\n"
      ]
     }
    ],
@@ -137,19 +373,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<_io.TextIOWrapper name='/home/jan/Documents/masterthesis/project/mucus/configs/tests/cfg_test_time_nbeads_0.toml' mode='r' encoding='UTF-8'>\n",
-      "<_io.TextIOWrapper name='/home/jan/Documents/masterthesis/project/mucus/configs/tests/cfg_test_time_nbeads_1.toml' mode='r' encoding='UTF-8'>\n",
-      "<_io.TextIOWrapper name='/home/jan/Documents/masterthesis/project/mucus/configs/tests/cfg_test_time_nbeads_2.toml' mode='r' encoding='UTF-8'>\n",
-      "<_io.TextIOWrapper name='/home/jan/Documents/masterthesis/project/mucus/configs/tests/cfg_test_time_nbeads_3.toml' mode='r' encoding='UTF-8'>\n",
-      "<_io.TextIOWrapper name='/home/jan/Documents/masterthesis/project/mucus/configs/tests/cfg_test_time_nbeads_4.toml' mode='r' encoding='UTF-8'>\n",
-      "<_io.TextIOWrapper name='/home/jan/Documents/masterthesis/project/mucus/configs/tests/cfg_test_time_nbeads_5.toml' mode='r' encoding='UTF-8'>\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/home/jan/Documents/masterthesis/project/mucus/configs/tests/cfg_test_time_nbeads_0.toml'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[24], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m6\u001b[39m):\n\u001b[1;32m      4\u001b[0m     fin \u001b[39m=\u001b[39m cfg_path \u001b[39m+\u001b[39m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m/cfg_test_time_nbeads_\u001b[39m\u001b[39m{\u001b[39;00mi\u001b[39m:\u001b[39;00m\u001b[39md\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m.toml\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m----> 5\u001b[0m     x \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39;49m(fin, encoding\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mUTF-8\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[1;32m      6\u001b[0m     out \u001b[39m=\u001b[39m toml\u001b[39m.\u001b[39mload(x)\n\u001b[1;32m      7\u001b[0m     \u001b[39mprint\u001b[39m(x)\n",
+      "File \u001b[0;32m~/anaconda3/envs/mucus/lib/python3.10/site-packages/IPython/core/interactiveshell.py:282\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    275\u001b[0m \u001b[39mif\u001b[39;00m file \u001b[39min\u001b[39;00m {\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m}:\n\u001b[1;32m    276\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    277\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIPython won\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt let you open fd=\u001b[39m\u001b[39m{\u001b[39;00mfile\u001b[39m}\u001b[39;00m\u001b[39m by default \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    278\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    279\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39myou can use builtins\u001b[39m\u001b[39m'\u001b[39m\u001b[39m open.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    280\u001b[0m     )\n\u001b[0;32m--> 282\u001b[0m \u001b[39mreturn\u001b[39;00m io_open(file, \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/home/jan/Documents/masterthesis/project/mucus/configs/tests/cfg_test_time_nbeads_0.toml'"
      ]
     }
    ],
@@ -165,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
