--- a/test_skripts/test_stuff.ipynb
+++ b/test_skripts/test_stuff.ipynb
@@ -123,99 +123,7 @@
     }
    ],
    "source": [
-    "# make the .py\n",
-    "import numpy as np\n",
-    "from polymer import Config, Polymer\n",
-    "import os\n",
-    "import time\n",
-    "import datetime\n",
-    "\n",
-    "names = ('chain_testForces_50beads_1Msteps', 'box_testCharges_100beads_1Msteps')\n",
-    "dir_data = '/storage/janmak98/masterthesis'\n",
-    "\n",
-    "cfg_names = list(())\n",
-    "cfg_names.append(dir_data+'/configs/box/test/cfg_box_twoChains_140beads_2Msteps.toml')\n",
-    "traj_names = list(())\n",
-    "traj_names.append(dir_data + '/trajectories/box/test/traj_box_twoChains_140beads_2Msteps.gro')\n",
-    "dist_names = list(())\n",
-    "dist_names.append(dir_data + '/distances/box/test/dist_box_twoChains_140beads_2Msteps.npy')\n",
-    "\n",
-    "for name in names:\n",
-    "    for i in range(4):\n",
-    "        cfg_fname = f'{dir_data:s}/configs/box/test/cfg_{name:s}_{i:d}.toml'\n",
-    "        traj_fname = f'{dir_data:s}/trajectories/box/test/traj_{name:s}_{i:d}.gro'\n",
-    "        dist_fname = f'{dir_data:s}/distances/box/test/dist_{name:s}_{i:d}.npy'\n",
-    "        \n",
-    "        cfg_names.append(cfg_fname)\n",
-    "        traj_names.append(traj_fname)\n",
-    "        dist_names.append(dist_fname)\n",
-    "        \n",
-    "for fname in cfg_names:\n",
-    "    if not os.path.exists(fname):\n",
-    "        raise NameError('File '+fname+' does not exist!')\n",
-    "    \n",
-    "for fname in cfg_names:\n",
-    "    if not os.path.exists(fname):\n",
-    "        raise NameError('File '+fname+' does not exist!')\n",
-    "\n",
-    "# delete lbox = None in .toml file\n",
-    "def delete_lbox(cfg_fname):\n",
-    "    f = open(cfg_fname)\n",
-    "    output = \"\"\n",
-    "    for line in f:\n",
-    "        if line != \"lbox = None\\n\":\n",
-    "            output += line\n",
-    "    f.close()\n",
-    "\n",
-    "    f = open(cfg_fname, \"w\")\n",
-    "    f.write(output)\n",
-    "    f.close()\n",
-    "    return\n",
-    "\n",
-    "# calculate distance matrix trajectory\n",
-    "def distances(traj):\n",
-    "    n = len(traj[0]) # number of atoms\n",
-    "    distances = np.zeros((1, n , n))\n",
-    "    \n",
-    "    r_left = np.tile(traj[0], (n, 1, 1)) # repeats vector along third dimension len(a) times\n",
-    "    r_right = np.reshape(np.repeat(traj[0], n, 0), (n, n, 3)) # does the same but \"flipped\"\n",
-    "\n",
-    "    directions = r_left - r_right # this is right considering the mesh method. dir[i, j] = r_j - r_i\n",
-    "    distances[0] = np.linalg.norm(directions, axis=2)\n",
-    "    \n",
-    "    for frame in traj[1:]:\n",
-    "        r_left = np.tile(frame, (n, 1, 1)) # repeats vector along third dimension len(a) times\n",
-    "        r_right = np.reshape(np.repeat(frame, n, 0), (n, n, 3)) # does the same but \"flipped\"\n",
-    "\n",
-    "        directions = r_left - r_right # this is right considering the mesh method. dir[i, j] = r_j - r_i\n",
-    "        distances = np.append(distances, [np.linalg.norm(directions, axis=2)], axis=0)\n",
-    "        \n",
-    "    return distances\n",
-    "N = len(cfg_names)\n",
-    "i = 1\n",
-    "\n",
-    "now = time.localtime()\n",
-    "now_str = f\"{now.tm_mon:d}.{now.tm_mday}.{now.tm_year}  {now.tm_hour}:{now.tm_min}:{now.tm_sec}\"\n",
-    "print(\"\\nCalculation started \", now_str)\n",
-    "\n",
-    "for cfg_fname, traj_fname, dist_fname in zip(cfg_names, traj_names, dist_names):\n",
-    "    \n",
-    "    delete_lbox(cfg_fname)\n",
-    "\n",
-    "    cfg = Config.from_toml(cfg_fname)\n",
-    "    p = Polymer(cfg)\n",
-    "    p.load_traj_gro(traj_fname, overwrite=True)\n",
-    "\n",
-    "    d = distances(p.trajectory)\n",
-    "    np.save(dist_fname, d)\n",
-    "    \n",
-    "    print(f'\\n{i:d}/{N:d} distances calculated')\n",
-    "    i += 1\n",
-    "    \n",
-    "now = time.localtime()\n",
-    "now_str = f\"{now.tm_mon:d}.{now.tm_mday}.{now.tm_year}  {now.tm_hour}:{now.tm_min}:{now.tm_sec}\"\n",
-    "\n",
-    "print(\"\\nCalculation finished \", now_str)"
+    "# make the .py\n"
    ]
   },
   {
