--- a/test_skripts/test_stuff.ipynb
+++ b/test_skripts/test_stuff.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,6 +698,48 @@
     "\n",
     "print(x[L])\n",
     "print(x[np.logical_not(L)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create .py that reads last 10k frames of long traj\n",
+    "\n",
+    "# config\n",
+    "varin1 = '/home/jan/Documents/masterthesis/project/mucus/configs/sys_120beeds_120.00lbox_0.00005mu_v1.toml'\n",
+    "# trajectory\n",
+    "varin2 = '/home/jan/Documents/masterthesis/project/mucus/test_skripts/trajectories/traj_120beeds_1frames_0.00005mu_v4.gro'\n",
+    "\n",
+    "cfg = Config.from_toml(varin1)\n",
+    "p = Polymer(cfg)\n",
+    "p.load_traj_gro(varin2, overwrite=True)\n",
+    "\n",
+    "traj = p.trajectory\n",
+    "\n",
+    "p.load_traj_ndarray(traj[-10000:])\n",
+    "p.save_system()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3 4 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [1, 2, 3, 4, 5]\n",
+    "x = np.array(x)\n",
+    "print(x[-3:])"
    ]
   }
  ],
