--- a/test_skripts/test_stuff.ipynb
+++ b/test_skripts/test_stuff.ipynb
@@ -380,6 +380,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = 0.5\n",
+    "np.save(\"/home/jan/Documents/masterthesis/project/mucus/var.npy\", m)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [
@@ -702,9 +712,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/home/janmak98/mucus/trajectories/traj_120beeds_201frames_0.00005mu_v4.gro'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 15\u001b[0m\n\u001b[1;32m     12\u001b[0m traj \u001b[39m=\u001b[39m p\u001b[39m.\u001b[39mtrajectory\n\u001b[1;32m     14\u001b[0m p\u001b[39m.\u001b[39mload_traj_ndarray(traj[\u001b[39m-\u001b[39m\u001b[39m1000\u001b[39m:])\n\u001b[0;32m---> 15\u001b[0m p\u001b[39m.\u001b[39;49msave_system()\n",
+      "File \u001b[0;32m~/Documents/masterthesis/project/mucus/polymer/polymer.py:952\u001b[0m, in \u001b[0;36mPolymer.save_system\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    948\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39msave_system\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[1;32m    949\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    950\u001b[0m \u001b[39m    saves both trajectory and system config\u001b[39;00m\n\u001b[1;32m    951\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 952\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49msave_traj_gro()\n\u001b[1;32m    953\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msave_config()\n\u001b[1;32m    954\u001b[0m     \u001b[39mreturn\u001b[39;00m\n",
+      "File \u001b[0;32m~/Documents/masterthesis/project/mucus/polymer/polymer.py:867\u001b[0m, in \u001b[0;36mPolymer.save_traj_gro\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    864\u001b[0m trajectory \u001b[39m=\u001b[39m md\u001b[39m.\u001b[39mTrajectory(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtrajectory, topology)\n\u001b[1;32m    866\u001b[0m \u001b[39m# save as gromacs file\u001b[39;00m\n\u001b[0;32m--> 867\u001b[0m trajectory\u001b[39m.\u001b[39;49msave_gro(filename\u001b[39m=\u001b[39;49mfname_traj)\n\u001b[1;32m    869\u001b[0m \u001b[39mreturn\u001b[39;00m\n",
+      "File \u001b[0;32m~/anaconda3/envs/mucus/lib/python3.10/site-packages/mdtraj/core/trajectory.py:1699\u001b[0m, in \u001b[0;36mTrajectory.save_gro\u001b[0;34m(self, filename, force_overwrite, precision)\u001b[0m\n\u001b[1;32m   1687\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"Save trajectory in Gromacs .gro format\u001b[39;00m\n\u001b[1;32m   1688\u001b[0m \n\u001b[1;32m   1689\u001b[0m \u001b[39mParameters\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1696\u001b[0m \u001b[39m    The number of decimal places to use for coordinates in GRO file\u001b[39;00m\n\u001b[1;32m   1697\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m   1698\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_valid_unitcell()\n\u001b[0;32m-> 1699\u001b[0m \u001b[39mwith\u001b[39;00m GroTrajectoryFile(filename, \u001b[39m'\u001b[39;49m\u001b[39mw\u001b[39;49m\u001b[39m'\u001b[39;49m, force_overwrite\u001b[39m=\u001b[39;49mforce_overwrite) \u001b[39mas\u001b[39;00m f:\n\u001b[1;32m   1700\u001b[0m     f\u001b[39m.\u001b[39mwrite(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mxyz, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtopology, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtime, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39munitcell_vectors,\n\u001b[1;32m   1701\u001b[0m             precision\u001b[39m=\u001b[39mprecision)\n",
+      "File \u001b[0;32m~/anaconda3/envs/mucus/lib/python3.10/site-packages/mdtraj/formats/gro.py:158\u001b[0m, in \u001b[0;36mGroTrajectoryFile.__init__\u001b[0;34m(self, filename, mode, force_overwrite, top)\u001b[0m\n\u001b[1;32m    156\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mIOError\u001b[39;00m(\u001b[39m'\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m already exists\u001b[39m\u001b[39m'\u001b[39m \u001b[39m%\u001b[39m filename)\n\u001b[1;32m    157\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_frame_index \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m--> 158\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_file \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39;49m(filename, \u001b[39m'\u001b[39;49m\u001b[39mw\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m    159\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    160\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39minvalid mode: \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m\"\u001b[39m \u001b[39m%\u001b[39m mode)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/home/janmak98/mucus/trajectories/traj_120beeds_201frames_0.00005mu_v4.gro'"
+     ]
+    }
+   ],
    "source": [
     "# create .py that reads last 10k frames of long traj\n",
     "\n",
@@ -719,7 +745,7 @@
     "\n",
     "traj = p.trajectory\n",
     "\n",
-    "p.load_traj_ndarray(traj[-10000:])\n",
+    "p.load_traj_ndarray(traj[-1000:])\n",
     "p.save_system()\n"
    ]
   },
