--- a/test_skripts/test_stuff.ipynb
+++ b/test_skripts/test_stuff.ipynb
@@ -450,6 +450,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mv calculationsree0.npy calculations/ree0.npy & mv calculationsree1.npy calculations/ree1.npy & mv calculationsree2.npy calculations/ree2.npy & \n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"\"\n",
+    "for i in range(3):\n",
+    "    s += f\"mv calculationsree{i:d}.npy calculations/ree{i:d}.npy & \"\n",
+    "print(s)    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
    "outputs": [
@@ -474,6 +494,39 @@
     "print(\"1%\", n2L(n, 0.01))\n",
     "print(\"2%\", n2L(n, 0.02))\n",
     "print(\"4%\", n2L(n, 0.04))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7693\n",
+      "7693\n",
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "steps = 100000\n",
+    "stride = 13\n",
+    "idx_traj = 1\n",
+    "\n",
+    "a = np.zeros(int(np.ceil(steps/stride)))\n",
+    "for step in range(1,steps):\n",
+    "    if step%stride==0:\n",
+    "        a[idx_traj] = 1\n",
+    "        idx_traj += 1\n",
+    "        \n",
+    "print(idx_traj)\n",
+    "idx = int(np.ceil(steps/stride))\n",
+    "\n",
+    "print(idx)\n",
+    "print(a[-1])"
    ]
   },
   {
