--- a/test_skripts/testclass.ipynb
+++ b/test_skripts/testclass.ipynb
@@ -23,6 +23,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<polymer.polymer.Polymer object at 0x7f9b4cd42ec0>\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "print() argument after * must be an iterable, not Polymer",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m p \u001b[39m=\u001b[39m Polymer(config)\n\u001b[1;32m      3\u001b[0m p\u001b[39m.\u001b[39mcreate_box()\n\u001b[0;32m----> 4\u001b[0m p\u001b[39m.\u001b[39;49mtest1()\n",
+      "File \u001b[0;32m~/Documents/masterthesis/project/mucus/polymer/polymer.py:63\u001b[0m, in \u001b[0;36mPolymer.test1\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     61\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mtest1\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[1;32m     62\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mself\u001b[39m)\n\u001b[0;32m---> 63\u001b[0m     \u001b[39mprint\u001b[39;49m(\u001b[39m*\u001b[39;49m\u001b[39mself\u001b[39;49m)\n\u001b[1;32m     64\u001b[0m     \u001b[39mreturn\u001b[39;00m\n",
+      "\u001b[0;31mTypeError\u001b[0m: print() argument after * must be an iterable, not Polymer"
+     ]
+    }
+   ],
+   "source": [
+    "config = Config.from_toml(parent_path + \"/config.toml\")\n",
+    "p = Polymer(config)\n",
+    "p.create_box()\n",
+    "p.test1()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
