--- a/test_skripts/pbc.ipynb
+++ b/test_skripts/pbc.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/jan/Documents/masterthesis/project/mucus\n",
-      "['/home/jan/Documents/masterthesis/project/mucus/test_skripts', '/home/jan/anaconda3/envs/mucus/lib/python310.zip', '/home/jan/anaconda3/envs/mucus/lib/python3.10', '/home/jan/anaconda3/envs/mucus/lib/python3.10/lib-dynload', '', '/home/jan/.local/lib/python3.10/site-packages', '/home/jan/anaconda3/envs/mucus/lib/python3.10/site-packages', '/home/jan/anaconda3/envs/mucus/lib/python3.10/site-packages/PyQt5_sip-12.11.0-py3.10-linux-x86_64.egg', PosixPath('/home/jan/Documents/masterthesis/project/mucus'), PosixPath('/home/jan/Documents/masterthesis/project/mucus'), PosixPath('/home/jan/Documents/masterthesis/project/mucus'), PosixPath('/home/jan/Documents/masterthesis/project/mucus'), PosixPath('/home/jan/Documents/masterthesis/project/mucus'), '/home/jan/Documents/masterthesis/project/mucus']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "from pathlib import Path\n",
@@ -23,15 +14,14 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from polymer.polymer import Polymer\n",
-    "from polymer.config import Config\n",
+    "from polymer import Polymer, Config\n",
     "\n",
     "from numba import njit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +121,7 @@
     "    dis = np.linalg.norm(dir, axis=0)\n",
     "    return dis, dir\n",
     "\n",
-    "print(dis)\n"
+    "\n"
    ]
   }
  ],
@@ -153,7 +143,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.10.8"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "e4c7bcd968ce4280c944f6cd2dacba05d8381ac4d3aeee75066fba063ae2bf0c"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
