added reporter to polymesh

--- a/test_skripts/pbc.ipynb
+++ b/test_skripts/pbc.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,12 +63,7 @@
       " [-4.9 -4.9 -4.9]\n",
       " [ 0.2  0.2  0.2]\n",
       " [ 0.   0.   4.9]\n",
-      " [ 0.   0.  -4.9]]\n",
-      "[[ 0.          0.34641016  9.17986928  6.92964646 12.00249974]\n",
-      " [ 0.34641016  0.          8.83345912  7.2152616  12.32963909]\n",
-      " [ 9.17986928  8.83345912  0.         15.36782353 20.88276802]\n",
-      " [ 6.92964646  7.2152616  15.36782353  0.          9.8       ]\n",
-      " [12.00249974 12.32963909 20.88276802  9.8         0.        ]]\n"
+      " [ 0.   0.  -4.9]]\n"
      ]
     },
     {
@@ -118,10 +113,67 @@
     "            dir[:, i, j] = d\n",
     "            dir[:, j, i] = -d\n",
     "            \n",
+    "    # apply mic\n",
+    "    dir -= lbox*np.round(dir/lbox)\n",
+    "            \n",
     "    dis = np.linalg.norm(dir, axis=0)\n",
     "    return dis, dir\n",
     "\n",
+    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.         0.34641016 8.1406388  6.92964646 6.932532  ]\n",
+      " [0.34641016 0.         8.48704896 6.932532   6.92964646]\n",
+      " [8.1406388  8.48704896 0.         4.70850295 4.90815648]\n",
+      " [6.92964646 6.932532   4.70850295 0.         0.2       ]\n",
+      " [6.932532   6.92964646 4.90815648 0.2        0.        ]]\n",
+      "[[0.         0.34641016 8.1406388  6.92964646 6.932532  ]\n",
+      " [0.34641016 0.         8.48704896 6.932532   6.92964646]\n",
+      " [8.1406388  8.48704896 0.         4.70850295 4.90815648]\n",
+      " [6.92964646 6.932532   4.70850295 0.         0.2       ]\n",
+      " [6.932532   6.92964646 4.90815648 0.2        0.        ]]\n",
+      "[[ True  True  True  True  True]\n",
+      " [ True  True  True  True  True]\n",
+      " [ True  True  True  True  True]\n",
+      " [ True  True  True  True  True]\n",
+      " [ True  True  True  True  True]]\n",
+      "[[[ True  True  True  True  True]\n",
+      "  [ True  True  True  True  True]\n",
+      "  [ True  True  True  True  True]\n",
+      "  [ True  True  True  True  True]\n",
+      "  [ True  True  True  True  True]]\n",
+      "\n",
+      " [[ True  True  True  True  True]\n",
+      "  [ True  True  True  True  True]\n",
+      "  [ True  True  True  True  True]\n",
+      "  [ True  True  True  True  True]\n",
+      "  [ True  True  True  True  True]]\n",
+      "\n",
+      " [[ True  True  True  True  True]\n",
+      "  [ True  True  True  True  True]\n",
+      "  [ True  True  True  True  True]\n",
+      "  [ True  True  True  True  True]\n",
+      "  [ True  True  True  True  True]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "dis, dir = dis_dir_mic(positions, lbox)\n",
+    "dis_new, dir_new = dis_dir_mic(positions_new, lbox)\n",
+    "print(dis)\n",
+    "print(dis_new)\n",
+    "print(dis==dis_new)\n",
+    "print(dir==dir_new)"
    ]
   }
  ],
