finished system folder

--- a/test_skripts/test_stuff.ipynb
+++ b/test_skripts/test_stuff.ipynb
@@ -25,7 +25,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#get structure factor\n",
+    "fname_cfg = \"   \"\n",
+    "fname_traj = \"\"\n",
+    "\n",
+    "cfg = Config.from_toml(fname_cfg)\n",
+    "fname_traj = cfg.fname_traj\n",
+    "\n",
+    "p = Polymer(cfg)\n",
+    "p.load_traj_gro(fname_traj, overwrite=True)\n",
+    "\n",
+    "Q, S_q = p.get_structure_factor_rdf()\n",
+    "\n",
+    "print(Q.shape)\n",
+    "print(S_q.shape)\n",
+    "\n",
+    "structure_factor = np.append([Q], [S_q], axis=1)\n",
+    "print(structure_factor.shape)"
+   ]
   },
   {
    "cell_type": "code",
